# tflite-sine-predictor

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  model.h5  model.tflite
.github/workflows/: cpp-code-analysis.yml  python-code-analysis.yml
scripts/: convert_keras_to_tflite.py  create_keras_model.py  run_tflite_model.py
src/: arguments.h  main.cpp  tflite_runner.h
